[package]
name = "trackingalloc"
version = "0.2.0"
edition = "2018"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "fast tracking allocator"
homepage = "https://github.com/gameroasters/trackingallocator-rs"
repository = "https://github.com/gameroasters/trackingallocator-rs"
license = "MIT"
readme = "README.md"
categories = ["development-tools::profiling"]
keywords = ["profiling","optimization"]